--- a/app/src/main/res/layout/native_large.xml
+++ b/app/src/main/res/layout/native_large.xml
@@ -4,7 +4,6 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -32,7 +31,7 @@
             <LinearLayout
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="5dip"
+                android:layout_marginStart="5dip"
                 android:orientation="vertical">
 
                 <TextView
@@ -41,7 +40,6 @@
                     android:layout_height="wrap_content"
                     android:ellipsize="end"
                     android:maxLines="2"
-                    android:text="@string/app_name"
                     android:textColor="@android:color/black"
                     android:textSize="@dimen/_14sdp" />
 
@@ -52,7 +50,7 @@
 
                     <TextView
                         android:id="@+id/ad_advertiser"
-                        android:layout_width="wrap_content"
+                        android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:gravity="bottom"
@@ -63,23 +61,6 @@
                         android:textStyle="bold" />
 
                 </LinearLayout>
-
-                <RatingBar
-                    android:id="@+id/ad_stars"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:minHeight="13dp"
-                    android:numStars="5"
-                    android:progressDrawable="@drawable/ratingbar_full"
-                    android:rating="3.5"
-                    android:stepSize="0.01" />
-
-                <TextView
-                    android:id="@+id/ad_price"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textColor="@color/gntBlack"
-                    android:textSize="@dimen/_10sdp" />
             </LinearLayout>
         </LinearLayout>
 
@@ -98,8 +79,7 @@
             android:id="@+id/ad_call_to_action"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-
-            android:layout_marginVertical="8dp"
+            android:layout_marginBottom="8dp"
             android:background="@drawable/ads_bg_lib"
             android:gravity="center"
             android:text="Cài Đặt"
@@ -110,7 +90,6 @@
             app:layout_constraintEnd_toEndOf="@+id/ad_body"
             app:layout_constraintStart_toStartOf="@+id/ad_body"
             app:layout_constraintTop_toBottomOf="@+id/ad_body" />
-
 
         <TextView
             android:id="@+id/textView3"
